# snowglobe-skills

./: .gitignore  Makefile  README.md
.claude-plugin/: marketplace.json
skills/app-description-writer/: SKILL.md
skills/scaffold-snowglobe-agent-with-tools/: SKILL.md
skills/snowglobe-agent-description/: SKILL.md
skills/validate-snowglobe-agent/: run_validators.py
test_agents/: _smoke.py
test_agents/customer_support_agent/: pyproject.toml
test_agents/customer_support_agent/.snowglobe/: config.rc
test_agents/customer_support_agent/customer_support_agent/: __init__.py  agent.py  data.py  routing.py
test_agents/customer_support_agent/customer_support_agent/models/: __init__.py  message.py  ticket.py  user.py
test_agents/customer_support_agent/customer_support_agent/tools/: __init__.py  email.py  escalate.py  faq.py  history.py  lookup.py  preferences.py  refund.py  ticket.py
test_agents/customer_support_agent/tests/: test_agent.py  test_models.py  test_tools.py
test_agents/devops_agent/: config.yaml  pyproject.toml
test_agents/devops_agent/devops_agent/: __init__.py  _llm.py  agent.py  config.py  parser.py
test_agents/devops_agent/devops_agent/tools/: __init__.py  deploy.py  healthcheck.py  logs.py  restart.py  rollback.py  scale.py  status.py
test_agents/devops_agent/tests/: test_agent.py
test_agents/dictionary_agent/: pyproject.toml
test_agents/dictionary_agent/dictionary_agent/: __init__.py  _llm.py  agent.py  data.py  tools.py
test_agents/dictionary_agent/tests/: test_agent.py
test_agents/echo_agent/: echo_agent.py  pyproject.toml  (+1 more)
test_agents/note_agent/: pyproject.toml
test_agents/note_agent/src/note_agent/: __init__.py  agent.py  parser.py  store.py  tools.py
test_agents/note_agent/tests/: test_agent.py
test_agents/personal_assistant_agent/: pyproject.toml
test_agents/personal_assistant_agent/personal_assistant/: __init__.py  agent.py  intent.py  memory.py
test_agents/personal_assistant_agent/personal_assistant/llm/: __init__.py  client.py
test_agents/personal_assistant_agent/personal_assistant/tools/: __init__.py  calculator.py  calendar.py  contacts.py  email.py  news.py  notes.py  reminders.py  search.py  translate.py  weather.py
test_agents/personal_assistant_agent/tests/: test_agent.py  test_tools.py
test_agents/research_agent/: pyproject.toml
test_agents/research_agent/research_agent/: __init__.py  agent.py  utils.py
test_agents/research_agent/research_agent/core/: __init__.py  llm.py  memory.py  openai_loop.py
test_agents/research_agent/research_agent/tools/: __init__.py  citations.py  extract.py  outline.py  save.py  search.py  summarize.py
test_agents/research_agent/tests/: test_agent.py  test_tools.py
test_agents/todo_agent/: pyproject.toml
test_agents/todo_agent/tests/: test_agent.py  test_db.py
test_agents/todo_agent/todo_agent/: __init__.py  _llm.py  agent.py  db.py  models.py
test_agents/todo_agent/todo_agent/tools/: __init__.py  complete.py  create.py  delete.py  list.py
test_agents/weather_agent/: pyproject.toml
test_agents/weather_agent/src/weather_agent/: __init__.py  _llm.py  agent.py  api_client.py  cache.py  formatter.py  tools.py
test_agents/weather_agent/tests/: test_agent.py  test_api_client.py
(+16 files in other folders)
