[project]
name = "devops_agent"
version = "0.1.0"
description = "Seven-tool devops agent driven by a YAML service registry"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0", "litellm>=1.40"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["devops_agent*"]
