[project]
name = "personal_assistant_agent"
version = "0.1.0"
description = "Ten-tool personal assistant agent"
requires-python = ">=3.9"
dependencies = ["python-dateutil>=2.8", "anthropic>=0.39"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["personal_assistant*"]
