[project]
name = "todo_agent"
version = "0.1.0"
description = "Four-tool todo agent backed by sqlite"
requires-python = ">=3.9"
dependencies = ["openai>=1.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["todo_agent*"]
